--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,5 +33,5 @@
     
     <uses-sdk android:minSdkVersion="5" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
-
+	<uses-permission android:name="android.permission.HARDWARE_TEST"></uses-permission>
 </manifest>
